2021-06-06 Markus Gans  <guru.mail@muenster.de>
	* Bug fixing in FString and FTermDetection
	* FTermDetection now has clean code by using FString instead of char*

2021-06-03 Markus Gans  <guru.mail@muenster.de>
	* Some FString optimizations

2021-05-30 Markus Gans  <guru.mail@muenster.de>
	* FString internally changed from wchar_t* to std::wstring

2021-05-24 Markus Gans  <guru.mail@muenster.de>
	* Using std::string for the attribute buffer

2021-05-22 Markus Gans  <guru.mail@muenster.de>
	* Convert FOptiMove from char[] to std::string

2021-05-13 Markus Gans  <guru.mail@muenster.de>
	* Prevent duplicate widget in the close widget list

2021-05-07 Markus Gans  <guru.mail@muenster.de>
	* Some pointers were replaced by references

2021-05-04 Markus Gans  <guru.mail@muenster.de>
	* Prevent flickering when resizing terminals or redrawing 
	  the screen via ctrl-l

2021-05-02 Markus Gans  <guru.mail@muenster.de>
	* Bugfix for sending multiple SIGWINCH signals from 
	  gnome-terminal under Wayland

2021-05-01 Markus Gans  <guru.mail@muenster.de>
	* Replace some std::bind with lambda functions

2021-04-30 Markus Gans  <guru.mail@muenster.de>
	* Fixes Linux console bug from February 20, 2021

2021-04-27 Markus Gans  <guru.mail@muenster.de>
	* Code optimization at widget focus

2021-04-24 Markus Gans  <guru.mail@muenster.de>
	* Fixed mutex deadlock in FLogger

2021-04-21 Markus Gans  <guru.mail@muenster.de>
	* Fixes the detection of the terminal size after a SIGWINCH signal

2021-04-18 Markus Gans  <guru.mail@muenster.de>
	* Decoupling the FWidget and FWindow classes from FVTerm
	* Avoid redrawing widgets when show() is called multiple times
	* Readjustment of the root widget when the terminal size is changed

2021-04-11 Markus Gans  <guru.mail@muenster.de>
	* Better support for kitty terminals

2021-03-31 Markus Gans  <guru.mail@muenster.de>
	* argv is now stored internally as a std::vector container

2021-03-30 Markus Gans  <guru.mail@muenster.de>